samples/_failures_safe/1761176450_043ff5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5719c6ff.c: In function ‘main’:
./samples/SAFE/__tmp_5719c6ff.c:139:12: error: missing terminating " character
  139 |     printf("Enter log entries (format: timestamp level message).
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5719c6ff.c:139:5: error: expected expression at end of input
  139 |     printf("Enter log entries (format: timestamp level message).
      |     ^~~~~~
./samples/SAFE/__tmp_5719c6ff.c:139:5: error: expected declaration or statement at end of input
